samples/_failures_safe/1761692000_ebf0ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b30227e.c: In function ‘print_statistics’:
./samples/SAFE/__tmp_6b30227e.c:137:12: error: missing terminating " character
  137 |     printf("Log Analysis Results
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6b30227e.c:137:5: error: expected expression at end of input
  137 |     printf("Log Analysis Results
      |     ^~~~~~
./samples/SAFE/__tmp_6b30227e.c:137:5: error: expected declaration or statement at end of input
